--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html lang="he-IL">
+
   <head>
     <meta charset="utf-8" />
     <title>HomeVisit</title>
   </head>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
+  
+  <script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('/sw.js', { scope: '/' })
+          .then((registration) => {
+            console.log('ServiceWorker registration successful with scope: ', registration.scope);
+          }, (err) => {
+            console.log('ServiceWorker registration failed: ', err);
+          });
+        navigator.serviceWorker.ready.then((registration) => {
+          console.log("Service Worker Ready ", registration);
+        })
+      });
+    }
+  </script>
 </html>
