record audio, with permission

--- a/src/index.html
+++ b/src/index.html
@@ -10,18 +10,18 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
-  
+
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', () => {
         navigator.serviceWorker.register('/sw.js', { scope: '/' })
           .then((registration) => {
-            console.log('ServiceWorker registration successful with scope: ', registration.scope);
+            console.log('[ServiceWorker] registration successful with scope: ', registration.scope);
           }, (err) => {
-            console.log('ServiceWorker registration failed: ', err);
+            console.log('[ServiceWorker] registration failed: ', err);
           });
         navigator.serviceWorker.ready.then((registration) => {
-          console.log("Service Worker Ready ", registration);
+          console.log("[ServiceWorker] Ready ", registration);
         })
       });
     }
