--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <title>HomeVisit</title>
+    <link rel="manifest" href="/manifest.json">
   </head>
 
   <body>
