--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
   <head>
     <meta charset="utf-8" />
     <title>HomeVisit</title>
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="manifest.json">
+    <link rel="shortcut icon" href="favicon.ico">
   </head>
 
   <body>
@@ -12,7 +13,7 @@
     <div id="root"></div>
   </body>
 
-  <script>
+  <!-- <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', () => {
         navigator.serviceWorker.register('/sw.js', { scope: '/' })
@@ -26,5 +27,5 @@
         })
       });
     }
-  </script>
+  </script> -->
 </html>
